# app-universe

./: .gitignore  Makefile  README.md  demo.py  devnotes.md
app-universe/: pyproject.toml
app-universe/src/app_universe/: __init__.py  paths.py  run_agent.py
app-universe/src/app_universe/app_agents/: base.py  gold_solution_agent.py  react_agent.py
app-universe/src/app_universe/mcp_server/: mcp_server.py
app-universe/src/app_universe/runner/: base.py  database_sandbox.py  environment_preparer.py  runner.py  task_instance.py
app-universe/src/app_universe/utils/: diff_database.py
app-universe/src/app_universe/world/: auth.py  generate.py  model.py
app-universe/tests/utils/: test_diff_database.py
apps/: README.md  docker-compose.yaml
apps/gmail/: Dockerfile  pyproject.toml
apps/gmail/src/gmail/: __init__.py  main.py
apps/user/: pyproject.toml
apps/user/src/user/: __init__.py  main.py
apps/user/tests/: test_auth.py
data/: task_template.py
data/tasks/: example.py
data/tasks/example-task/: task.py  task.yaml
data/tasks/example_task/: task.py  task.yaml
data/tasks/no-op-task/: task.py  task.yaml
generate/: world.json
generate/task/: task_template.py
generators/tasks/: task_template.yaml
generators/world/: generate_world.py
