[project]
name = "app-universe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eli", email = "eli.chandler@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "llama-index>=0.9.48",
    "llama-index-tools-mcp>=0.4.2",
    "loguru>=0.7.3",
    "openai-agents>=0.4.0",
]

[project.scripts]
app-universe = "app_universe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
