[project]
name = "app-universe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eli", email = "eli.chandler@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastmcp>=2.12.5",
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "loguru>=0.7.3",
]

[project.scripts]
app-universe = "app_universe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "langchain>=1.0.2",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=1.0.1",
    "pytest>=8.4.2",
]
